Abby Larner Nav Exercise

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,38 @@
 <!doctype html>
 <html>
-<head>
-  <title>HUGE NavExercise</title>
-  <link rel="stylesheet" href="/styles/main.css">
-</head>
-<body>
-<h1>Hello.</h1>
-</body>
+	<head>
+	  <title>HUGE NavExercise</title>
+	  <link rel="stylesheet" href="/styles/main.css">
+	  <script language="javascript" type="text/javascript" src="/scripts/scripts.js"></script>
+	</head>
+	<body>
+		<input type="checkbox" id="off-canvas" class="toggle" />
+		<div id="page-wrapper">
+			<div id="navbar-wrapper">
+				<img src="/images/HUGE-white.png" />
+				<label for="off-canvas" class="icon-wrapper">
+					<span class="nav-icon"></span>
+				</label>
+			</div>
+			<div id="nav-wrapper">
+				<nav>
+					<ul id="nav-inner">
+
+					</ul>
+				</nav>
+			</div>
+			<div id="content-wrapper" class="overlay">
+				<label for="off-canvas" class="large-hit"></label>
+				<div class="hero-img">
+					<img src="/images/background-image.jpg" alt="Main Image of Office" />
+				</div>
+				<h1>
+					Get paid for<br /> giving a shit.
+				</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
